# RhythmicRanker

./: README.md
electronics/: README.md
electronics/data_tester/: pyproject.toml  receiver.py
electronics/rawMpuToAPI/: README.md  README.txt  main.py
electronics/rawMpuToAPI/lib/: secrets.py
software/: .env.example  start.ps1
software/api/: README.md
software/api/src/: index.js
software/api/src/routes/: metrics.js
software/broker/: README.md  broker.py  start.ps1  start.sh
software/interface/: backend.py
software/interface/templates/: index.html
