[tool.poetry]
name = "data-tester"
version = "0.1.0"
description = "Module used to check the data reception on server side and data sending on connected object side."
authors = ["tristanqtn <tristan.querton@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
